--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <audio id="background-music" loop>
-        <source src="MUSIK AGIL&NADA.mp3" type="audio/mpeg">
+        <source src="asset/MUSIK AGIL&NADA.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung elemen audio.
     </audio>
     
@@ -371,5 +371,6 @@ Selamat untuk Agil & Nada!`;
 </body>
 
 </html>
+
 
 
